<resources>
    <string name="app_name">Kiostixv3</string>
    <string name="register">Daftar</string>
    <string name="save">Simpan</string>
    <string name="register_now">Daftar Sekarang<i>&#160;!&#160;</i></string>
    <string name="login">Masuk</string>
    <string name="skip">Lewati</string>
    <string name="signin">Masuk</string>
    <string name="email">Email</string>
    <string name="phone">Nomor Telepon</string>
    <string name="password">Kata Sandi</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="handphone">No. Handphone</string>
    <string name="no_identity">No. Identitas (KTP/Kartu Pelajar) </string>
    <string name="forgot_password"><u>Lupa Kata Sandi anda?</u></string>
    <string name="provision_register">*Dengan melakukan registrasi, saya telah membaca dan setuju dengan <u>Syarat &amp; Ketentuan</u> yang berlaku</string>
    <string name="bener_note">Temukan event menarik di sekitarmu<i> &#160;!&#160;</i></string>
    <string name="synopsis">Synopsis</string>
    <string name="date_and_time">Tanggal &amp; Waktu</string>
    <string name="category">Kategori</string>
    <string name="please_choose_category">Silahkan pilih kategori tiket yang anda inginkan :</string>
    <string name="please_choose_date_time">Silahkan pilih tanggal dan waktu kunjungan anda :</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="total_price">Total Harga</string>
    <string name="buy_now">Beli Sekarang</string>
    <string name="pay_now">Bayar Sekarang</string>
    <string name="order_now">Order Sekarang</string>
    <string name="finish">Selesai</string>
    <string name="latest">Terbaru</string>
    <string name="location">Lokasi</string>
    <string name="venue">Venue</string>
    <string name="change_customer">Ubah data pengguna</string>
    <string name="change_password">Ubah Kata Sandi</string>

    <string name="event">Event</string>
    <string name="date">Tanggal</string>
    <string name="activity">Aktivitas &amp; Hiburan</string>
    <string name="free_event">Event Gratis</string>
    <string name="beranda">Beranda</string>
    <string name="tix">Tix</string>
    <string name="help">Bantuan</string>
    <string name="account">Akun</string>
    <string name="search_here">Cari di sini...</string>
    <string name="search_by_name">Nama atau venue...</string>
    <string name="view_all">Lihat semua ></string>
    <string name="get_ticket">Dapatkan Tiket <i>&#160;!&#160;</i></string>
    <string name="get_ticket_desc">Cari tiket acara,aktivitas &amp; hiburan, dan masih banyak lagi <i>&#160;!&#160;</i> </string>
    <string name="promotion_event">Promosikan Eventmu <i>&#160;!&#160;</i></string>
    <string name="promotion_event_desc">Get your events promoted by selling ticket with us <i>&#160;!&#160;</i></string>
    <string name="started_now">Mulai Sekarang <i>&#160;!&#160;</i></string>
    <string name="verify">Verifikasi</string>
    <string name="order_summary">Rangkuman Pembelian</string>
    <string name="detail_transaction">Detail Transaksi</string>
    <string name="trans_summary">Rangkuman Transaksi</string>
    <string name="select_category">Pilih Kategori</string>
    <string name="detail_order">Detail Pesanan</string>
    <string name="price_per_ticket">Harga per Tiket</string>
    <string name="fee">Biaya</string>
    <string name="discount">Potongan</string>
    <string name="choose_payment_method">Pilih Metode Pembayaran</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="no_virtual">No. Virtual Account</string>
    <string name="payment_status">Status Pembayaran</string>
    <string name="status_">Status :</string>
    <string name="choose">Pilih</string>
    <string name="cancel">Batal</string>
    <string name="see_detail">Lihat detil tiket ></string>
    <string name="transaction_id">ID Transaksi</string>
    <string name="started_now_desc">Mulai cari dan dapatkan tiketmu.</string>
    <string name="error_process">Transaksi tidak bisa dilanjutkan.</string>
    <string name="my_tix">Tix</string>
    <string name="no_data">Tidak ada event</string>
    <string name="please_wait">Memproses Transaksi</string>
    <string name="please_login">Anda belum terdaftar, Silahkan untuk melakukan Login/Register</string>

    <!--FAQ-->
    <string name="term_condition">Syarat &amp; Ketentuan</string>
    <string name="my_account">Akun Saya</string>
    <string name="return_ticket">Pengembalian Tiket</string>
    <string name="buying_ticket">Pembelian Tiket</string>
    <string name="taking_ticket">Pengambilan Tiket</string>
    <string name="lost_ticket">Kehilangan Tiket</string>
    <string name="subject_chooser">Subject (Pilih Salah Satu)</string>
    <string name="write_message">Tulis Pesan...</string>
    <string name="send_message">Kirim Pesan</string>
    <string name="subject_01">Teknis - Pembelian - Keluhan</string>
    <string name="subject_02">Pendaftaran Event - Kerja Sama</string>
    <string name="subject_03">Karir</string>
    <string name="name_required">Nama harus diisi</string>
    <string name="email_required">Email harus diisi</string>
    <string name="phone_required">Telepon harus diisi</string>
    <string name="message_required">Pesan harus diisi</string>
    <string name="subject_required">Subjek harus diisi</string>
    <string name="gender">Gender</string>
    <string name="pob">Tempat Lahir</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="id_type">Tipe Identitas</string>
    <string name="country">Negara</string>
    <string name="city">Kota</string>
    <string name="province">Provinsi</string>
    <string name="address">Alamat</string>
    <string name="zip_code">Kode Pos</string>
    <string name="change_photo">Change Image</string>

    <string name="sorry">Maaf,</string>
    <string name="sorry_desc">Pesanan anda sudah melewati batas waktu pembayaran</string>
    <string name="date_and_time_not_available">Waktu dan Tanggal tidak tersedia</string>
    <string name="re_order">Pesan Ulang</string>
    <string name="expiry_date">Masa Berlaku</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="cvv">CV/CVV</string>
    <string name="cc_owner_name">Nama Pemegang Kartu</string>
    <string name="voucher_code_opt">Kode Voucher (Jika Ada)</string>
    <string name="use">Gunakan</string>
    <string name="voucher">Vocher</string>
    <string name="customer_detail">Detail Pemesan</string>
    <string name="Confirmation">Konfirmasi</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="confirm_cancel_order">Apakah anda yakin untuk membatalkan order ini ?</string>
    <string name="change_password_already_sent_via_email">Perubahan password sudah dikirim melalui email anda.</string>

</resources>
