<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lnly_header_00"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView.Black.Montserrat.Bold"
                android:textSize="@dimen/size_14sp"
                android:gravity="left"
                android:text="@string/detail_order"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/TextView.Black.Montserrat.Bold"
                android:textSize="@dimen/size_14sp"
                android:gravity="right"
                android:text="@string/price_per_ticket"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rvly_sparator_00"
            android:layout_below="@+id/lnly_header_00"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_marginBottom="@dimen/size_20dp"
            android:background="@color/grey_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/lnly_list_00"
            android:layout_below="@id/rvly_sparator_00"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:id="@+id/rvly_sparator_01"
            android:layout_below="@+id/lnly_list_00"
            android:layout_marginTop="@dimen/size_20dp"
            android:layout_marginBottom="@dimen/size_20dp"
            android:background="@color/grey_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/lnly_subtotal_00"
            android:layout_below="@+id/rvly_sparator_01"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextView.Black.Montserrat.Bold"
                android:textSize="@dimen/size_14sp"
                android:gravity="left"
                android:text="@string/subtotal"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvw_subtotal_00"
                style="@style/TextView.Black.Montserrat.Bold"
                android:textSize="@dimen/size_14sp"
                android:gravity="right"
                android:text="IDR 400,000"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnly_discount_00"
            android:layout_below="@+id/lnly_subtotal_00"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txvw_title_discount_00"
                style="@style/TextView.Black.Montserrat"
                android:textSize="@dimen/size_14sp"
                android:gravity="left"
                android:text="@string/discount"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvw_discount_00"
                style="@style/TextView.Black.Montserrat"
                android:textSize="@dimen/size_14sp"
                android:gravity="right"
                android:text="IDR 0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnly_fee_00"
            android:layout_below="@+id/lnly_discount_00"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextView.Black.Montserrat"
                android:textSize="@dimen/size_14sp"
                android:gravity="left"
                android:text="@string/fee"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvw_fee_00"
                style="@style/TextView.Black.Montserrat"
                android:textSize="@dimen/size_14sp"
                android:gravity="right"
                android:text="IDR 0"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnly_total_00"
            android:layout_marginTop="@dimen/size_10dp"
            android:layout_below="@+id/lnly_fee_00"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextView.Black.Montserrat.Bold"
                android:textSize="@dimen/size_14sp"
                android:gravity="left"
                android:text="@string/total"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/txvw_total_00"
                style="@style/TextView.Black.Montserrat.Bold"
                android:textSize="@dimen/size_18sp"
                android:gravity="right"
                android:text="IDR 405,000"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
