<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_2"
    tools:context="g.rezza.moch.kiostixv3.activity.SignInActivity">

    <ImageView
        android:id="@+id/imvw_logo_00"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_30dp"
        android:layout_width="@dimen/size_120dp"
        android:scaleType="fitXY"
        android:layout_height="@dimen/size_45dp"
        app:srcCompat="@drawable/ic_kiostix" />

    <TextView
        android:id="@+id/txvw_sign_in"
        style="@style/TextView.White.Montserrat.Bold"
        android:textSize="@dimen/size_22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imvw_logo_00"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_60dp"
        android:text="@string/signin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/txvw_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/size_50dp"
        android:padding="@dimen/size_20dp"
        android:orientation="vertical">

        <g.rezza.moch.kiostixv3.component.EditextStandardC
            android:id="@+id/edtx_email_00"
            android:layout_marginBottom="@dimen/size_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <g.rezza.moch.kiostixv3.component.EditextStandardC
            android:id="@+id/edtx_password_00"
            android:layout_marginBottom="@dimen/size_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/bbtn_login_00"
            style="@style/TextView.White.Montserrat"
            android:textSize="@dimen/size_16sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/size_30dp"
            android:background="@drawable/button_transparent"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_45dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/txvw_forgot_00"
            android:gravity="center_horizontal"
            style="@style/TextView.White.Montserrat"
            android:layout_marginTop="@dimen/size_20dp"
            android:textSize="@dimen/size_14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password" />
    </LinearLayout>

</RelativeLayout>
